crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v10_mutable.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@mutable struct M { @id(1) long a; @id(2) string b; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Mutable)]
public partial record class M : ITopicType<M>
{
    [Id(1)]
    public int A { get; init; } = default!;
    [Id(2)]
    public string B { get; init; } = default!;
}

public sealed class MTypeSupport : IDdsTopicType<M>
{
    public static readonly MTypeSupport Instance = new();

    public string TypeName => "M";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Mutable;

    public byte[] Encode(M sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(M sample, EndianMode endian)
    {
        var w = new Xcdr2Writer(endian);
        using (var __scope = w.BeginMutable())
        {
            w.WriteEmHeader(1u, 2, false);
            w.WriteInt32(sample.A);
            {
                var __sub = new Xcdr2Writer(endian);
                __sub.WriteString(sample.B);
                var __subBytes = __sub.ToArray();
                w.WriteEmHeader(2u, 3, false);
                w.WriteUInt32((uint)__subBytes.Length);
                w.WriteBytes(__subBytes);
            }
        }
        return w.ToArray();
    }

    public M Decode(ReadOnlySpan<byte> bytes)
    {
        var r = new Xcdr2Reader(bytes, EndianMode.LittleEndian);
        int __m0 = default;
        string __m1 = default;
        var __scope = r.BeginDHeader();
        while (!r.DHeaderDone(__scope))
        {
            var (__id, __lc, __mu) = r.ReadEmHeader();
            if (__lc >= 3) { var __nx = r.ReadUInt32(); _ = __nx; }
            switch (__id)
            {
                case 1u:
                    __m0 = r.ReadInt32();
                    break;
                case 2u:
                    __m1 = r.ReadString();
                    break;
                default:
                    throw new XcdrException($"unknown member id {__id}");
            }
        }
        r.EndDHeader(__scope);
        return new M
        {
            A = __m0!,
            B = __m1!,
        };
    }

    public byte[] KeyHash(M sample)
    {
        return new byte[16];
    }
}
