crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v11_optional_member_mutable.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@mutable struct O { @id(1) @optional long maybe; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Mutable)]
public partial record class O : ITopicType<O>
{
    [Id(1)]
    [Optional]
    public int? Maybe { get; init; } = default!;
}

public sealed class OTypeSupport : IDdsTopicType<O>
{
    public static readonly OTypeSupport Instance = new();

    public string TypeName => "O";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Mutable;
    public byte[] TypeObject => __ZeroDdsTypeObject;
    private static readonly byte[] __ZeroDdsTypeObject = new byte[] {
        0xf2, 0x51, 0x04, 0x00, 0x0a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x02, 0x00, 0x00, 0x00, 0x4f, 0x00, 0x00, 0x00, 0x1c, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x00, 0x00, 0x14, 0x00, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 
        0x09, 0x00, 0x04, 0x00, 0x06, 0x00, 0x00, 0x00, 0x6d, 0x61, 0x79, 0x62, 
        0x65, 0x00, 0x00, 0x00, 
    };

    public byte[] Encode(O sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(O sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(O sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, O sample)
    {
        if (w.IsXcdr1)
        {
            if (sample.Maybe is not null)
            {
                {
                    var __sub = new Xcdr2Writer(w.Endian, Xcdr2Writer.Xcdr1MaxAlignmentValue);
                    __sub.WriteInt32(sample.Maybe.Value);
                    w.WritePlCdr1Member(1u, __sub.ToArray());
                }
            }
            w.WritePlCdr1Sentinel();
        }
        else
        {
        using (var __scope = w.BeginMutable())
        {
            if (sample.Maybe is not null)
            {
                {
                    var __sub = new Xcdr2Writer(w.Endian);
                    __sub.WriteInt32(sample.Maybe.Value);
                    var __subBytes = __sub.ToArray();
                    w.WriteEmHeader(1u, 4, false);
                    w.WriteUInt32((uint)__subBytes.Length);
                    w.WriteBytes(__subBytes);
                }
            }
        }
        }
    }

    public O Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public O Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public O Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public O DecodeFrom(ref Xcdr2Reader r)
    {
        int? __m0 = default!;
        if (r.IsXcdr1)
        {
            while (r.BeginPlCdr1Member(out var __id, out var __plscope))
            {
                switch (__id)
                {
                    case 1u:
                        __m0 = r.ReadInt32();
                        break;
                    default: break;
                }
                r.EndPlCdr1Member(__plscope);
            }
        return new O
        {
            Maybe = __m0!,
        };
        }
        var __scope = r.BeginDHeader();
        while (!r.DHeaderDone(__scope))
        {
            var (__id, __lc, __mu) = r.ReadEmHeader();
            if (__lc == 4) { var __nx = r.ReadUInt32(); _ = __nx; }
            switch (__id)
            {
                case 1u:
                    __m0 = r.ReadInt32();
                    break;
                default:
                    throw new XcdrException($"unknown member id {__id}");
            }
        }
        r.EndDHeader(__scope);
        return new O
        {
            Maybe = __m0!,
        };
    }

    public byte[] KeyHash(O sample)
    {
        return new byte[16];
    }
}
