crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v1_empty_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Empty {};\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Empty : ITopicType<Empty>
{
}

public sealed class EmptyTypeSupport : IDdsTopicType<Empty>
{
    public static readonly EmptyTypeSupport Instance = new();

    public string TypeName => "Empty";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

    public byte[] Encode(Empty sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Empty sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(Empty sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Empty sample)
    {
    }

    public Empty Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public Empty Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public Empty Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public Empty DecodeFrom(ref Xcdr2Reader r)
    {
        return new Empty
        {
        };
    }

    public byte[] KeyHash(Empty sample)
    {
        return new byte[16];
    }
}
