crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v2_plain_primitives_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Point { long x; long y; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Point : ITopicType<Point>
{
    public int X { get; init; } = default!;
    public int Y { get; init; } = default!;
}

public sealed class PointTypeSupport : IDdsTopicType<Point>
{
    public static readonly PointTypeSupport Instance = new();

    public string TypeName => "Point";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

    public byte[] Encode(Point sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Point sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(Point sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Point sample)
    {
        w.WriteInt32(sample.X);
        w.WriteInt32(sample.Y);
    }

    public Point Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public Point Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public Point Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public Point DecodeFrom(ref Xcdr2Reader r)
    {
        int __m0 = default!;
        __m0 = r.ReadInt32();
        int __m1 = default!;
        __m1 = r.ReadInt32();
        return new Point
        {
            X = __m0!,
            Y = __m1!,
        };
    }

    public byte[] KeyHash(Point sample)
    {
        return new byte[16];
    }
}
