crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v3_mixed_primitives_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct All {\\n\\\n         boolean b; octet o; short s; unsigned short us;\\n\\\n         long l; unsigned long ul; long long ll; unsigned long long ull;\\n\\\n         float f; double d; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class All : ITopicType<All>
{
    public bool B { get; init; } = default!;
    public byte O { get; init; } = default!;
    public short S { get; init; } = default!;
    public ushort Us { get; init; } = default!;
    public int L { get; init; } = default!;
    public uint Ul { get; init; } = default!;
    public long Ll { get; init; } = default!;
    public ulong Ull { get; init; } = default!;
    public float F { get; init; } = default!;
    public double D { get; init; } = default!;
}

public sealed class AllTypeSupport : IDdsTopicType<All>
{
    public static readonly AllTypeSupport Instance = new();

    public string TypeName => "All";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;
    public byte[] TypeObject => __ZeroDdsTypeObject;
    private static readonly byte[] __ZeroDdsTypeObject = new byte[] {
        0xf2, 0x51, 0x01, 0x00, 0x0c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x04, 0x00, 0x00, 0x00, 0x41, 0x6c, 0x6c, 0x00, 0xdc, 0x00, 0x00, 0x00, 
        0x0a, 0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x01, 0x00, 0x02, 0x00, 0x00, 0x00, 0x62, 0x00, 0x00, 0x00, 
        0x10, 0x00, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x01, 0x00, 0x02, 0x00, 
        0x02, 0x00, 0x00, 0x00, 0x6f, 0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 
        0x02, 0x00, 0x00, 0x00, 0x01, 0x00, 0x03, 0x00, 0x02, 0x00, 0x00, 0x00, 
        0x73, 0x00, 0x00, 0x00, 0x11, 0x00, 0x00, 0x00, 0x03, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x06, 0x00, 0x03, 0x00, 0x00, 0x00, 0x75, 0x73, 0x00, 0x00, 
        0x00, 0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 0x04, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x04, 0x00, 0x02, 0x00, 0x00, 0x00, 0x6c, 0x00, 0x00, 0x00, 
        0x11, 0x00, 0x00, 0x00, 0x05, 0x00, 0x00, 0x00, 0x01, 0x00, 0x07, 0x00, 
        0x03, 0x00, 0x00, 0x00, 0x75, 0x6c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x11, 0x00, 0x00, 0x00, 0x06, 0x00, 0x00, 0x00, 0x01, 0x00, 0x05, 0x00, 
        0x03, 0x00, 0x00, 0x00, 0x6c, 0x6c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x12, 0x00, 0x00, 0x00, 0x07, 0x00, 0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 
        0x04, 0x00, 0x00, 0x00, 0x75, 0x6c, 0x6c, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x10, 0x00, 0x00, 0x00, 0x08, 0x00, 0x00, 0x00, 0x01, 0x00, 0x09, 0x00, 
        0x02, 0x00, 0x00, 0x00, 0x66, 0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 
        0x09, 0x00, 0x00, 0x00, 0x01, 0x00, 0x0a, 0x00, 0x02, 0x00, 0x00, 0x00, 
        0x64, 0x00, 0x00, 0x00, 
    };

    public byte[] Encode(All sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(All sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(All sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, All sample)
    {
        w.WriteBool(sample.B);
        w.WriteOctet(sample.O);
        w.WriteInt16(sample.S);
        w.WriteUInt16(sample.Us);
        w.WriteInt32(sample.L);
        w.WriteUInt32(sample.Ul);
        w.WriteInt64(sample.Ll);
        w.WriteUInt64(sample.Ull);
        w.WriteFloat32(sample.F);
        w.WriteFloat64(sample.D);
    }

    public All Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public All Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public All Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public All DecodeFrom(ref Xcdr2Reader r)
    {
        bool __m0 = default!;
        __m0 = r.ReadBool();
        byte __m1 = default!;
        __m1 = r.ReadOctet();
        short __m2 = default!;
        __m2 = r.ReadInt16();
        ushort __m3 = default!;
        __m3 = r.ReadUInt16();
        int __m4 = default!;
        __m4 = r.ReadInt32();
        uint __m5 = default!;
        __m5 = r.ReadUInt32();
        long __m6 = default!;
        __m6 = r.ReadInt64();
        ulong __m7 = default!;
        __m7 = r.ReadUInt64();
        float __m8 = default!;
        __m8 = r.ReadFloat32();
        double __m9 = default!;
        __m9 = r.ReadFloat64();
        return new All
        {
            B = __m0!,
            O = __m1!,
            S = __m2!,
            Us = __m3!,
            L = __m4!,
            Ul = __m5!,
            Ll = __m6!,
            Ull = __m7!,
            F = __m8!,
            D = __m9!,
        };
    }

    public byte[] KeyHash(All sample)
    {
        return new byte[16];
    }
}
