crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v4_string_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Greeting { string text; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Greeting : ITopicType<Greeting>
{
    public string Text { get; init; } = default!;
}

public sealed class GreetingTypeSupport : IDdsTopicType<Greeting>
{
    public static readonly GreetingTypeSupport Instance = new();

    public string TypeName => "Greeting";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

    public byte[] Encode(Greeting sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Greeting sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(Greeting sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Greeting sample)
    {
        w.WriteString(sample.Text);
    }

    public Greeting Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public Greeting Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public Greeting Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public Greeting DecodeFrom(ref Xcdr2Reader r)
    {
        string __m0 = default!;
        __m0 = r.ReadString();
        return new Greeting
        {
            Text = __m0!,
        };
    }

    public byte[] KeyHash(Greeting sample)
    {
        return new byte[16];
    }
}
