crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v5_seq_int32_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Bag { sequence<long> ids; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using System.Collections.Generic;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Bag : ITopicType<Bag>
{
    public ISequence<int> Ids { get; init; } = default!;
}

public sealed class BagTypeSupport : IDdsTopicType<Bag>
{
    public static readonly BagTypeSupport Instance = new();

    public string TypeName => "Bag";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;
    public byte[] TypeObject => __ZeroDdsTypeObject;
    private static readonly byte[] __ZeroDdsTypeObject = new byte[] {
        0xf2, 0x51, 0x01, 0x00, 0x0c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x04, 0x00, 0x00, 0x00, 0x42, 0x61, 0x67, 0x00, 0x1e, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x00, 0x00, 0x16, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
        0x01, 0x00, 0x80, 0xf3, 0x01, 0x00, 0x00, 0x04, 0x04, 0x00, 0x00, 0x00, 
        0x69, 0x64, 0x73, 0x00, 0x00, 0x00, 
    };

    public byte[] Encode(Bag sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Bag sample, EndianMode endian) => Encode(sample, endian, 1);
    public byte[] Encode(Bag sample, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Writer.Xcdr1MaxAlignmentValue : 4;
        var w = new Xcdr2Writer(endian, __maxAlign);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Bag sample)
    {
        {
            var __seq0 = (sample.Ids) as System.Collections.Generic.IEnumerable<int>;
            var __mat0 = __seq0 is null ? new System.Collections.Generic.List<int>() : new System.Collections.Generic.List<int>(__seq0);
            w.WriteSequenceLength(__mat0.Count);
            foreach (var __item0 in __mat0)
            {
                w.WriteInt32(__item0);
            }
        }
    }

    public Bag Decode(ReadOnlySpan<byte> bytes) => Decode(bytes, EndianMode.LittleEndian, 1);
    public Bag Decode(ReadOnlySpan<byte> bytes, EndianMode endian) => Decode(bytes, endian, 1);
    public Bag Decode(ReadOnlySpan<byte> bytes, EndianMode endian, int representation)
    {
        int __maxAlign = representation == 0 ? Xcdr2Reader.Xcdr1MaxAlignmentValue : 4;
        var r = new Xcdr2Reader(bytes, endian, __maxAlign);
        return DecodeFrom(ref r);
    }

    public Bag DecodeFrom(ref Xcdr2Reader r)
    {
        Omg.Types.ISequence<int> __m0 = default!;
        {
            int __cnt0 = r.ReadSequenceLength();
            var __list0 = new Omg.Types.SequenceList<int>();
            for (int __i0 = 0; __i0 < __cnt0; __i0++)
            {
                int __e0;
                __e0 = r.ReadInt32();
                __list0.Add(__e0);
            }
            __m0 = __list0;
        }
        return new Bag
        {
            Ids = __m0!,
        };
    }

    public byte[] KeyHash(Bag sample)
    {
        return new byte[16];
    }
}
