crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v6_seq_string_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Tags { sequence<string> tags; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using System.Collections.Generic;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Tags : ITopicType<Tags>
{
    public ISequence<string> Tags { get; init; } = default!;
}

public sealed class TagsTypeSupport : IDdsTopicType<Tags>
{
    public static readonly TagsTypeSupport Instance = new();

    public string TypeName => "Tags";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

    public byte[] Encode(Tags sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Tags sample, EndianMode endian)
    {
        var w = new Xcdr2Writer(endian);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Tags sample)
    {
        {
            var __seq = (sample.Tags) as System.Collections.Generic.IEnumerable<string>;
            var __mat = __seq is null ? new System.Collections.Generic.List<string>() : new System.Collections.Generic.List<string>(__seq);
            using (var __seqdh = w.BeginAppendable())
            {
                w.WriteSequenceLength(__mat.Count);
                foreach (var __item in __mat)
                {
                    w.WriteString(__item);
                }
            }
        }
    }

    public Tags Decode(ReadOnlySpan<byte> bytes)
    {
        var r = new Xcdr2Reader(bytes, EndianMode.LittleEndian);
        return DecodeFrom(r);
    }

    public Tags DecodeFrom(Xcdr2Reader r)
    {
        Omg.Types.ISequence<string> __m0 = default;
        {
            var __seqdh = r.BeginDHeader();
            int __cnt = r.ReadSequenceLength();
            var __list = new Omg.Types.SequenceList<string>();
            for (int __i = 0; __i < __cnt; __i++)
            {
                string __e;
                __e = r.ReadString();
                __list.Add(__e);
            }
            r.EndDHeader(__seqdh);
            __m0 = __list;
        }
        return new Tags
        {
            Tags = __m0!,
        };
    }

    public byte[] KeyHash(Tags sample)
    {
        return new byte[16];
    }
}
