crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v7_nested_modules_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"module Outer { module Inner { @final struct S { long x; }; }; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

namespace Outer
{
    namespace Inner
    {
        [Extensibility(ExtensibilityKind.Final)]
        public partial record class S : ITopicType<S>
        {
            public int X { get; init; } = default!;
        }

        public sealed class STypeSupport : IDdsTopicType<S>
        {
            public static readonly STypeSupport Instance = new();

            public string TypeName => "Outer::Inner::S";
            public bool IsKeyed => false;
            public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

            public byte[] Encode(S sample) => Encode(sample, EndianMode.LittleEndian);

            public byte[] Encode(S sample, EndianMode endian)
            {
                var w = new Xcdr2Writer(endian);
                EncodeInto(w, sample);
                return w.ToArray();
            }

            public void EncodeInto(Xcdr2Writer w, S sample)
            {
                w.WriteInt32(sample.X);
            }

            public S Decode(ReadOnlySpan<byte> bytes)
            {
                var r = new Xcdr2Reader(bytes, EndianMode.LittleEndian);
                return DecodeFrom(r);
            }

            public S DecodeFrom(Xcdr2Reader r)
            {
                int __m0 = default;
                __m0 = r.ReadInt32();
                return new S
                {
                    X = __m0!,
                };
            }

            public byte[] KeyHash(S sample)
            {
                return new byte[16];
            }
        }

    } // namespace Inner
} // namespace Outer
