crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v8_keyed_final.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct Sensor { @key long id; double value; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Final)]
public partial record class Sensor : ITopicType<Sensor>
{
    [Key]
    public int Id { get; init; } = default!;
    public double Value { get; init; } = default!;
}

public sealed class SensorTypeSupport : IDdsTopicType<Sensor>
{
    public static readonly SensorTypeSupport Instance = new();

    public string TypeName => "Sensor";
    public bool IsKeyed => true;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Final;

    public byte[] Encode(Sensor sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(Sensor sample, EndianMode endian)
    {
        var w = new Xcdr2Writer(endian);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, Sensor sample)
    {
        w.WriteInt32(sample.Id);
        w.WriteFloat64(sample.Value);
    }

    public Sensor Decode(ReadOnlySpan<byte> bytes)
    {
        var r = new Xcdr2Reader(bytes, EndianMode.LittleEndian);
        return DecodeFrom(r);
    }

    public Sensor DecodeFrom(Xcdr2Reader r)
    {
        int __m0 = default;
        __m0 = r.ReadInt32();
        double __m1 = default;
        __m1 = r.ReadFloat64();
        return new Sensor
        {
            Id = __m0!,
            Value = __m1!,
        };
    }

    public byte[] KeyHash(Sensor sample)
    {
        var __kw = new Xcdr2Writer(EndianMode.BigEndian);
        __kw.WriteInt32(sample.Id);
        var __kb = __kw.ToArray();
        if (__kb.Length > 16) { return Md5.Hash(__kb); }
        var __h = new byte[16];
        System.Array.Copy(__kb, 0, __h, 0, __kb.Length);
        return __h;
    }
}
