crates/idl-csharp/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v9_appendable.snap
---
source: crates/idl-csharp/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@appendable struct V { long a; long b; };\")"
---
// Generated by zerodds idl-csharp. Do not edit.
// Target: C# 12.0 / .NET 8+
#nullable enable

using Omg.Types;
using System;
using ZeroDDS.Cdr;

[Extensibility(ExtensibilityKind.Appendable)]
public partial record class V : ITopicType<V>
{
    public int A { get; init; } = default!;
    public int B { get; init; } = default!;
}

public sealed class VTypeSupport : IDdsTopicType<V>
{
    public static readonly VTypeSupport Instance = new();

    public string TypeName => "V";
    public bool IsKeyed => false;
    public ExtensibilityKind Extensibility => ExtensibilityKind.Appendable;

    public byte[] Encode(V sample) => Encode(sample, EndianMode.LittleEndian);

    public byte[] Encode(V sample, EndianMode endian)
    {
        var w = new Xcdr2Writer(endian);
        EncodeInto(w, sample);
        return w.ToArray();
    }

    public void EncodeInto(Xcdr2Writer w, V sample)
    {
        using (var __scope = w.BeginAppendable())
        {
            w.WriteInt32(sample.A);
            w.WriteInt32(sample.B);
        }
    }

    public V Decode(ReadOnlySpan<byte> bytes)
    {
        var r = new Xcdr2Reader(bytes, EndianMode.LittleEndian);
        return DecodeFrom(r);
    }

    public V DecodeFrom(Xcdr2Reader r)
    {
        var __scope = r.BeginDHeader();
        int __m0 = default;
        __m0 = r.ReadInt32();
        int __m1 = default;
        __m1 = r.ReadInt32();
        r.EndDHeader(__scope);
        return new V
        {
            A = __m0!,
            B = __m1!,
        };
    }

    public byte[] KeyHash(V sample)
    {
        return new byte[16];
    }
}
